fix: resolve abrupt crush and utilize sentry

--- a/app.json
+++ b/app.json
@@ -52,6 +52,13 @@
             "extraProguardRuleFiles": ["android/app/proguard-rules.pro"]
           }
         }
+      ],
+      [
+        "sentry-expo",
+        {
+          "organization": "elysium-05",
+          "project": "react-native"
+        }
       ]
     ],
     "assetBundlePatterns": ["assets/**/*"],
@@ -64,7 +71,7 @@
       "channel": "production"
     },
     "runtimeVersion": {
-      "policy": "sdkVersion"
+      "policy": "appVersion"
     },
     "extra": {
       "eas": {
