--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
     "firebase": "^11.10.0",
+    "sentry-expo": "^7.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
