fix: unresponsive notifications

--- a/sentry.properties
+++ b/sentry.properties
@@ -1,3 +1,14 @@
 defaults.url=https://sentry.io/
 defaults.org=elysium-05
 defaults.project=react-native
+
+# Note: This file is already configured with your organization
+# To complete setup:
+# 1. Get your DSN from: https://sentry.io/settings/elysium-05/projects/react-native/keys/
+# 2. Add to .env file: EXPO_PUBLIC_SENTRY_DSN=your_dsn_here
+# 3. Restart expo: npx expo start --clear
+# 
+# For production builds, store auth token as EAS secret:
+# eas secret:create --scope project --name SENTRY_AUTH_TOKEN --value YOUR_TOKEN
+#
+# See docs/SENTRY_SETUP.md for complete instructions
