--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@sentry/react-native": "^7.6.0",
     "expo": "~54.0.0",
     "expo-blur": "~15.0.7",
     "expo-build-properties": "^1.0.9",
@@ -53,7 +54,6 @@
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
     "firebase": "^11.10.0",
-    "sentry-expo": "^7.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
