--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ serviceAccountKey.json
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Debug files
+*.debug.log
+pglite-debug.log
