build: add AAB profile for Play Store distribution
- Change production profile to build AAB for optimized Play Store delivery
- Add production-apk profile for direct APK distribution (GitHub releases)
- AAB is 20-30% smaller on device due to Play Store optimization

--- a/eas.json
+++ b/eas.json
@@ -26,11 +26,18 @@
       "channel": "production",
       "autoIncrement": true,
       "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease"
+        "buildType": "app-bundle"
       },
       "ios": {
         "resourceClass": "m-medium"
+      }
+    },
+    "production-apk": {
+      "extends": "production",
+      "channel": "production",
+      "android": {
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleRelease"
       }
     }
   },
